<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ReadActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="7dp"
        android:paddingEnd="7dp">

        <include layout="@layout/action_bar_read" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/readActionBarId">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/noteTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-black"
                    android:maxLines="2"
                    android:text="@string/title_example"
                    android:textColor="@color/black"
                    android:textColorHighlight="#FFE3A0"
                    android:textIsSelectable="true"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/noteDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_date"
                    android:textColor="#80000000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/noteContentText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:text="@string/lorem"
                    android:textColor="@color/black"
                    android:textColorHighlight="#FFE3A0"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>

</RelativeLayout>